--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
     "framer-motion": "^12.23.24",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.4",
+    "openai": "^6.9.0",
     "or": "^0.2.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
@@ -58,7 +59,6 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "openai": "^6.9.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
