--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "form-data": "^4.0.5",
     "framer-motion": "^12.23.24",
+    "googleapis": "^167.0.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^16.0.7",
@@ -69,6 +71,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/form-data": "^2.5.2",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
